[gd_scene load_steps=14 format=3 uid="uid://db3gkixugpbvs"]

[ext_resource type="Script" path="res://map_b/scripts/player.gd" id="1_ske10"]
[ext_resource type="AudioStream" uid="uid://bbekxq3ochwch" path="res://map_b/materials/sounds/footstep-2.mp3" id="3_3w5nn"]
[ext_resource type="Script" path="res://map_b/scripts/flashlight.gd" id="3_gsojm"]
[ext_resource type="AudioStream" uid="uid://c3fm7c2yqsys6" path="res://map_b/materials/sounds/flaslight_sound.mp3" id="4_mivjr"]
[ext_resource type="AudioStream" uid="uid://ddxvxf5lc4njm" path="res://map_b/materials/sounds/footstep-3.mp3" id="4_wns3k"]
[ext_resource type="Script" path="res://map_b/scripts/ray_cast_3d.gd" id="4_wub38"]
[ext_resource type="AudioStream" uid="uid://t5eut7hasp1h" path="res://map_b/materials/sounds/footstep-1.mp3" id="5_clgtd"]
[ext_resource type="AudioStream" uid="uid://t8asotaso25f" path="res://map_b/materials/sounds/footstep-4.mp3" id="5_lnvvr"]
[ext_resource type="AudioStream" uid="uid://c16bv264v5vgg" path="res://map_b/materials/sounds/run.mp3" id="6_iugqp"]
[ext_resource type="AudioStream" uid="uid://bj2pss1kvx50n" path="res://map_b/materials/sounds/running.mp3" id="7_cyx0l"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fi0dr"]
radius = 0.412241

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_kg83u"]
length = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vqnp2"]

[node name="player" type="CharacterBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.978771, 0)
script = ExtResource("1_ske10")
walk_footsteps = Array[AudioStream]([ExtResource("5_clgtd"), ExtResource("3_3w5nn"), ExtResource("4_wns3k"), ExtResource("5_lnvvr")])
sprint_footsteps = Array[AudioStream]([ExtResource("6_iugqp"), ExtResource("6_iugqp"), ExtResource("6_iugqp"), ExtResource("7_cyx0l")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_fi0dr")

[node name="StepUp_F" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.476478, -0.505928)
shape = SubResource("SeparationRayShape3D_kg83u")

[node name="RayCast3D" type="RayCast3D" parent="StepUp_F"]
transform = Transform3D(0.258229, -0.0389729, -0.965297, 0.966084, 0.0104173, 0.258019, 4.51227e-08, -0.999186, 0.0403411, 0, 0, 0)
target_position = Vector3(0, -0.55, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
cast_shadow = 0
mesh = SubResource("CapsuleMesh_vqnp2")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.590337, -0.141475)

[node name="flashlight" type="SpotLight3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.291002, -0.557168, -0.26002)
visible = false
light_energy = 3.0
spot_range = 10.0
spot_attenuation = 2.0
spot_angle = 30.0
spot_angle_attenuation = 2.0
script = ExtResource("3_gsojm")

[node name="on_off" type="AudioStreamPlayer" parent="head/flashlight"]
stream = ExtResource("4_mivjr")

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
fov = 77.3366

[node name="RayCast3D" type="RayCast3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, -1.48619e-07, -1, 0, 3.4, -4.37114e-08, 0, -0.212008, -0.00025256)
script = ExtResource("4_wub38")

[node name="footstep_sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.99637, 0)
stream = ExtResource("5_clgtd")
max_db = 1.0

[node name="StepUp_R" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.476478, -0.505928)
shape = SubResource("SeparationRayShape3D_kg83u")

[node name="RayCast3D" type="RayCast3D" parent="StepUp_R"]
transform = Transform3D(0.258229, -0.0389729, -0.965297, 0.966084, 0.0104173, 0.258019, 4.51227e-08, -0.999186, 0.0403411, 0, 0, 0)
target_position = Vector3(0, -0.55, 0)

[node name="StepUp_L" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.476478, -0.505928)
shape = SubResource("SeparationRayShape3D_kg83u")

[node name="RayCast3D" type="RayCast3D" parent="StepUp_L"]
transform = Transform3D(0.258229, -0.0389729, -0.965297, 0.966084, 0.0104173, 0.258019, 4.51227e-08, -0.999186, 0.0403411, 0, 0, 0)
target_position = Vector3(0, -0.55, 0)

[node name="StairsBelowRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(-0.450867, 0.0202239, 0.892586, 0.00698126, 6.42484, 0, -0.892564, 0.0400366, -0.450878, -0.0444418, -0.945, 0.0110297)
target_position = Vector3(0, -0.3, 0)

[node name="sprint" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_iugqp")
